--- a/task-web/src/scripts/components/CreateUser/CreateUser.scss
+++ b/task-web/src/scripts/components/CreateUser/CreateUser.scss
@@ -1,30 +1,50 @@
+$accent-color: red;
+$border-color: #DDD;
+
 .update-user-data__form-data {
   margin: 40px auto;
   padding: 35px 0;
   text-align: center;
   width: 70%;
+}
 
-  .field__input {
-    border: 1px solid grey;
-    border-radius: 0.3 * 15px;
-    box-sizing: border-box;
-    height: 2.5 * 15px;
-    margin-bottom: 15px;
-    padding-left: 15px;
-    width: 100%;
+.field__input {
+  border: 1px solid $border-color;
+  border-radius: 0.3 * 15px;
+  box-sizing: border-box;
+  height: 2.5 * 15px;
+  margin-bottom: 15px;
+  padding-left: 15px;
+  width: 85%;
+}
 
-    &.field__input_error {
-      border: 2px solid red;
-    }
+.field__input_error {
+  border: 2px solid $accent-color;
+}
 
-    ~ .field__span-error {
-      color: red;
-      display: block;
-      margin-bottom: 15px;
+.field__span-error {
+  color: $accent-color;
+  display: block;
+  margin: 0 auto 15px;
+}
 
-      &.field__span-error_noneItem {
-        display: none;
-      }
-    }
-  }
+.field__span-error_noneItem {
+  display: none;
+}
+  
+.form-data__fieldset {
+  padding: 20px;
+  min-width: 300px;
+}
+
+.form-data__field {
+  justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: baseline;
+}
+
+.field__label {
+  width: 10%;
+  text-align: left;
 }
